--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,4 +1,10 @@
-<h1>Contact Us</h1>
-<p>To get in touch, please email us at <a href="mailto:support@chefhub.pw">support@ChefHub.pw</a>.</p>
+{{define "yield"}}
+    <h1>Contact Us</h1>
+    <p>
+        To get in touch, please email us at
+        <a href="mailto:support@chefhub.pw">support@ChefHub.pw
+        </a>.
+    </p>
 
-{{template "footer"}}
+    {{template "footer"}}
+{{end}}
