--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -2,7 +2,7 @@
   <!DOCTYPE html>
   <html lang="en">
   <head>
-    <title>LensLocked.com</title>
+    <title>ChefHub.pw</title>
     <link
             href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
             rel="stylesheet">
@@ -11,7 +11,7 @@
   <body>
 
   <div class="container-fluid">
-    <!-- Our content will go here... somehow -->
+    {{template "yield" .}}
   </div>
 
   <!-- jquery & Bootstrap JS -->
