--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -24,4 +24,10 @@
             Update
         </button>
     </form>
+    <br>
+    <form action="/galleries/{{.ID}}/delete" method="POST">
+        <button type="submit" class="btn btn-danger">
+            Delete
+        </button>
+    </form>
 {{end}}
