--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -1,30 +1,34 @@
 {{define "bootstrap"}}
-  <!DOCTYPE html>
-  <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>ChefHub.pw</title>
     <link
-            href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            rel="stylesheet">
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-  {{template "navbar"}}
+    {{template "navbar" .}}
 
-  <div class="container-fluid">
-    {{if .Alert}}
+    <div class="container-fluid">
+      {{if .Alert}}
       {{template "alert" .Alert}}
-    {{end}}
-    {{template "yield" .Yield}}
+      {{ end }}
+      {{template "yield" .Yield}}
 
-    {{template "footer"}}
-  </div>
+      {{template "footer"}}
+    </div>
 
-  <!-- jquery & Bootstrap JS -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-  </script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-  </script>
+    <!-- jquery & Bootstrap JS -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+      footer {
+        padding-top: 60px;
+      }
+    </style>
   </body>
-  </html>
-{{end}}
+</html>
+{{ end }}
