--- a/views/static/contact.gohtml
+++ b/views/static/contact.gohtml
@@ -1,8 +1,7 @@
 {{define "yield"}}
-    <h1>Contact Us</h1>
-    <p>
-        To get in touch, please email us at
-        <a href="mailto:support@chefhub.pw">support@ChefHub.pw
-        </a>.
-    </p>
-{{end}}
+<h1>Contact Us</h1>
+<p>
+  To get in touch, please email us at
+  <a href="mailto:support@chefhub.pw">support@ChefHub.pw </a>.
+</p>
+{{ end }}
