--- a/views/layouts/alert.gohtml
+++ b/views/layouts/alert.gohtml
@@ -1,6 +1,8 @@
 {{define "alert"}}
 <div class="alert alert-{{.Level}} alert-dimissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    {{.Message}}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  {{.Message}}
 </div>
-{{end}}
+{{ end }}
