--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -23,9 +23,8 @@
         <li><a href="/contact">Contact</a></li>
         {{if .User}}
         <li><a href="/galleries">Galleries</a></li>
-        {{
-          end
-        }}
+        <!-- prettier-ignore -->
+        {{ end }}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/login">Log In</a></li>
