--- a/views/galleries/index.gohtml
+++ b/views/galleries/index.gohtml
@@ -16,17 +16,23 @@
           <th scope="row">{{.ID}}</th>
           <td>{{.Title}}</td>
           <td>
-            <a href="/galleries/{{.ID}}">View</a>
+            <a href="/galleries/{{.ID}}">
+              View
+            </a>
           </td>
           <td>
-            <a href="/galleries/{{.ID}}/edit">Edit</a>
+            <a href="/galleries/{{.ID}}/edit">
+              Edit
+            </a>
           </td>
         </tr>
         <!-- prettier-ignore -->
         {{ end }}
       </tbody>
     </table>
-    <a href="/galleries/new" class="btn btn-primary">New Gallery</a>
+    <a href="/galleries/new" class="btn btn-primary">
+      New Gallery
+    </a>
   </div>
 </div>
 {{ end }}
