:fire: Range on show.gohtml

--- a/views/galleries/show.gohtml
+++ b/views/galleries/show.gohtml
@@ -4,7 +4,14 @@
     <h1>
       {{.Title}}
     </h1>
-    <p>Images coming soon...</p>
+    <ul>
+      <!-- prettier-ignore -->
+      {{range .Images}}
+
+      <li>{{.}}</li>
+      <!-- prettier-ignore -->
+      {{end}}
+    </ul>
   </div>
 </div>
 {{ end }}
