--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -18,7 +18,7 @@
     </label>
   </div>
   <div class="col-md-10">
-
+    {{template "galleryImages" .}}
   </div>
 </div>
 <div class="row">
@@ -74,11 +74,16 @@
 </form>
 {{end}}
 
-
-
-
 {{define "deleteImageForm"}}
 <form action="/galleries/{{.GalleryID}}/images/{{.Filename | urlquery}}/delete" method="POST">
   <button type="submit" class="btn btn-default">Delete</button>
 </form>
+{{end}}
+
+{{define "galleryImages"}}
+<ul>
+  {{range .Images}}
+  <li>{{.}}</li>
+  {{end}}
+</ul>
 {{end}}
