:fire: Updated my email address

--- a/views/static/contact.gohtml
+++ b/views/static/contact.gohtml
@@ -2,6 +2,6 @@
 <h1>Contact Us</h1>
 <p>
   To get in touch, please email us at
-  <a href="mailto:support@chefhub.pw">support@ChefHub.pw </a>.
+  <a href="mailto:brudnak@icloud.com">brudnak@icloud.com</a>.
 </p>
 {{ end }}
