:art: Updating the edit view

--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -81,9 +81,19 @@
 {{end}}
 
 {{define "galleryImages"}}
-<ul>
-  {{range .Images}}
-  <li>{{.}}</li>
+  {{range .ImagesSplitN 6}}
+  <div class="col-md-2">
+    {{range .}}
+    <a href="{{.}}">
+      <img src="{{.}}" class="thumbnail" />
+    </a>
+    {{ end }}
+  </div>
+  <!-- prettier-ignore-->
   {{end}}
-</ul>
+  <style>
+    .thumbnail {
+      width: 100%;
+    }
+  </style>
 {{end}}
