--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -1,11 +1,11 @@
 {{define "yield"}}
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Edit your gallery</h3>
+    <h2>Edit your gallery</h2>
     <a href="/galleries/{{.ID}}">
       View this gallery
     </a>
-    <hr>
+    <hr />
   </div>
   <div class="col-md-12">
     {{template "editGalleryForm" .}}
@@ -29,27 +29,34 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h3>Dangerous buttons...</h3>
-    <hr>
+    <hr />
   </div>
   <div class="col-md-12">
     {{template "deleteGalleryForm" .}}
   </div>
 </div>
-{{end}}
+{{ end }}
 
 {{define "editGalleryForm"}}
 <form action="/galleries/{{.ID}}/update" method="POST" class="form-horizontal">
   <div class="form-group">
     <label for="title" class="col-md-1 control-label">Title</label>
     <div class="col-md-10">
-      <input type="text" name="title" class="form-control" id="title" placeholder="What is the title of your gallery?" value="{{.Title}}">
+      <input
+        type="text"
+        name="title"
+        class="form-control"
+        id="title"
+        placeholder="What is the title of your gallery?"
+        value="{{.Title}}"
+      />
     </div>
     <div class="col-md-1">
       <button type="submit" class="btn btn-default">Save</button>
     </div>
   </div>
 </form>
-{{end}}
+{{ end }}
 
 {{define "deleteGalleryForm"}}
 <form action="/galleries/{{.ID}}/delete" method="POST" class="form-horizontal">
@@ -59,41 +66,60 @@
     </div>
   </div>
 </form>
-{{end}}
+{{ end }}
 
 {{define "uploadImageForm"}}
-<form action="/galleries/{{.ID}}/images" method="POST" enctype="multipart/form-data" class="form-horizontal">
+<form
+  action="/galleries/{{.ID}}/images"
+  method="POST"
+  enctype="multipart/form-data"
+  class="form-horizontal"
+>
   <div class="form-group">
     <label for="images" class="col-md-1 control-label">Add Images</label>
     <div class="col-md-10">
-      <input type="file" multiple="multiple" id="images" name="images">
+      <input type="file" multiple="multiple" id="images" name="images" />
       <p class="help-block">Please only use jpg, jpeg, and png.</p>
       <button type="submit" class="btn btn-default">Upload</button>
     </div>
   </div>
 </form>
-{{end}}
-
-{{define "deleteImageForm"}}
-<form action="/galleries/{{.GalleryID}}/images/{{.Filename | urlquery}}/delete" method="POST">
-  <button type="submit" class="btn btn-default">Delete</button>
-</form>
-{{end}}
+{{ end }}
 
 {{define "galleryImages"}}
-  {{range .ImagesSplitN 6}}
-  <div class="col-md-2">
-    {{range .}}
-    <a href="{{.}}">
-      <img src="{{.}}" class="thumbnail" />
-    </a>
-    {{ end }}
-  </div>
-  <!-- prettier-ignore-->
-  {{end}}
-  <style>
-    .thumbnail {
-      width: 100%;
-    }
-  </style>
-{{end}}
+{{range .ImagesSplitN 6}}
+<div class="col-md-2">
+  {{range .}}
+  <a href="{{.Path}}">
+    <img src="{{.Path}}" class="thumbnail" />
+  </a>
+  {{template "deleteImageForm" .}}
+  {{ end }}
+</div>
+{{ end }}
+<!--
+  Normally styles in the middle of your code is bad,
+  but for dev I think this is fine. We will fix it up
+  when we deploy
+  -->
+<style>
+  .thumbnail {
+    width: 100%;
+    margin-bottom: 6px;
+  }
+  .btn-delete {
+    margin-bottom: 6px;
+  }
+</style>
+{{ end }}
+
+{{define "deleteImageForm"}}
+<form
+  action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete"
+  method="POST"
+>
+  <button type="submit" class="btn btn-default btn-delete">
+    Delete
+  </button>
+</form>
+{{ end }}
