--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -7,6 +7,7 @@
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="/assets/styles.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -24,11 +25,6 @@
     <!-- jquery & Bootstrap JS -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-      footer {
-        padding-top: 60px;
-      }
-    </style>
   </body>
 </html>
 {{ end }}
