--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -105,7 +105,7 @@
 
 {{define "deleteImageForm"}}
 <form
-  action="/galleries/{{.GalleryID}}/images/{{.Filename}}/delete"
+  action="/galleries/{{.GalleryID}}/images/{{.Filename | urlquery}}/delete"
   method="POST"
 >
   {{ csrfField }}
