--- a/views/layouts/navbar.gohtml
+++ b/views/layouts/navbar.gohtml
@@ -27,10 +27,22 @@
         {{ end }}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Log In</a></li>
-        <li><a href="/signup">Sign Up</a></li>
+        {{if .User}}
+          <li>{{template "logoutForm"}}</li>
+        {{else}}
+          <li><a href="/login">Log In</a></li>
+          <li><a href="/signup">Sign Up</a></li>
+        {{end}}
       </ul>
     </div>
   </div>
 </nav>
 {{ end }}
+
+
+{{define "logoutForm"}}
+<form class="navbar-form navbar-left" action="/logout" method="post">
+  {{csrfField}}
+  <button type="submit" class="btn btn-default">Log out</button>
+</form>
+{{end}}
