--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -6,7 +6,7 @@
         <h3 class="panel-title">Sign Up Now!</h3>
       </div>
       <div class="panel-body">
-        {{template "signupForm"}}
+        {{template "signupForm" .}}
       </div>
     </div>
   </div>
@@ -24,16 +24,21 @@
       class="form-control"
       id="name"
       placeholder="Your full name"
+      value="{{.Name}}"
     />
   </div>
   <div class="form-group">
     <label for="email">Email address</label>
+    <!-- to keep "/" from displaying -->
     <input
       type="email"
       name="email"
       class="form-control"
       id="email"
       placeholder="Email"
+      {{if .Email}}
+        value={{.Email}}
+      {{end}}
     />
   </div>
   <div class="form-group">
